preventing overlap between Hero and Top City form

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -22,7 +22,7 @@
   line-height: 1.5;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 680px) {
   .hero-container h1 {
     font-size: 2rem;
   }
